# rustlynx

./: .gitignore  Cargo.toml  Format_party_data.py  README.md  devnotes.txt  generate_fake.py  launch  launch.PS1  toml_editor.py  toml_editor_rf.py  toml_runtime_editor.py
cfg/: Party0.toml  Party0_inference.toml  Party0_learning.toml  Party1.toml  Party1_inference.toml  Party1_learning.toml
cfg/ml/extratrees/: inference0.toml  inference1.toml  inference1_orig.toml  learning0.toml  learning0_orig.toml  learning1.toml  learning1_orig.toml
cfg/ml/logisticregression/: learning0.toml  learning1.toml
cfg/ml/naivebayes/: inference0.toml  inference1.toml
cfg/ml/randomforest/: inference0.toml  inference1_orig.toml  (+2 more)
computing_party/: mod.rs
computing_party/protocol/: batch.rs
custom_randomness/: arvs.csv  splits.csv
data/: transform.py
data/secret-shared/: class0.csv  class1.csv
src/: constants.rs  init.rs  io.rs  lib.rs  main.rs  util.rs
src/computing_party/: constants.rs  init.rs  mod.rs
src/trusted_initializer/: mod.rs
test/: integration_test.rs  launch  launch.PS1
test/scripts/: computing_party_ml_naive_bayes_inference.PS1  computing_party_protocol_equality_from_z2.PS1  computing_party_protocol_multiply.PS1  computing_party_protocol_multiply_z2.PS1  computing_party_protocol_open.PS1  computing_party_protocol_open_z2.PS1  computing_party_protocol_pairwise_mult_z2.PS1  computing_party_protocol_parallel_mult_z2.PS1  run.PS1  test.PS1  test_scripts.txt
treedata/: Party0_trees.json  Party1_trees.json  rev_trees.json
trusted_initializer/: mod.rs
(+46 files in other folders)
