[package]
name = "rustlynx"
version = "0.1.0"
authors = ["drail <daviscrailsback@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
config = "0.9.3"
csv = "1.1"
rand = "0.3.14"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.59"